Shrunk a lot of assets