@@ -5,8 +5,8 @@ import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
-import java.net.URI;
 import java.net.URL;
+import java.awt.geom.Ellipse2D;
 import java.awt.geom.AffineTransform;
 import java.awt.font.FontRenderContext;
 import java.awt.font.TextLayout;
@@ -33,8 +33,7 @@ public class ImageGenerator {
                 try {
                     File fontFile = new File(fontPath);
                     if (!fontFile.exists()) {
-                        // If it doesn't look like a file (no extension), try loading it as a system
-                        // font
+                        // If it doesn't look like a file (no extension), try loading it as a system font
                         if (!fontPath.contains(".")) {
                             cache.put(fontPath, new Font(fontPath, Font.BOLD, 12));
                         } else {
@@ -66,8 +65,7 @@ public class ImageGenerator {
                 return cache.get(hex);
             try {
                 // Fetch the Twemoji graphic from jsdelivr CDN using the emoji's hex sequence
-                URL url = new URI("https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/72x72/" + hex + ".png")
-                        .toURL();
+                URL url = new URL("https://cdn.jsdelivr.net/gh/jdecked/twemoji@15.1.0/assets/72x72/" + hex + ".png");
                 BufferedImage img = ImageIO.read(url);
                 cache.put(hex, img);
                 return img;
@@ -102,8 +100,8 @@ public class ImageGenerator {
         String gradType = "none";
         Color c1 = Color.WHITE;
         Color c2 = Color.WHITE;
-        Color outlineColor = new Color(30, 81, 117); // Darker blueish border for thicker walls
-        float outlineWidth = 7.0f; // Thick walls default (increased from 3.0)
+        Color outlineColor = new Color(15, 40, 70); // Darker blueish border for thicker walls
+        float outlineWidth = 5.0f; // Thick walls default (increased from 3.0)
         float fontSize = -1f; // -1 means use default base size
         String fontPath = null; // null means use global base font
 
@@ -182,7 +180,7 @@ public class ImageGenerator {
 
             // 2. Fetch and draw the user's profile picture
             try {
-                URL url = new URI(pfpUrl).toURL();
+                URL url = new URL(pfpUrl);
                 BufferedImage pfpImage = ImageIO.read(url);
 
                 if (pfpImage != null) {
@@ -190,8 +188,14 @@ public class ImageGenerator {
                     int pfpX = backgroundImage.getWidth() - pfpSize - pfpMarginRight;
                     int pfpY = pfpMarginTop;
 
-                    // Draw PFP (Square format like the reference)
-                    g2d.drawImage(pfpImage, pfpX, pfpY, pfpSize, pfpSize, null);
+                    // Crop PFP to a perfect square from the center to prevent squishing
+                    int minDim = Math.min(pfpImage.getWidth(), pfpImage.getHeight());
+                    int cropX = (pfpImage.getWidth() - minDim) / 2;
+                    int cropY = (pfpImage.getHeight() - minDim) / 2;
+                    BufferedImage croppedPfp = pfpImage.getSubimage(cropX, cropY, minDim, minDim);
+
+                    // Draw the perfectly cropped PFP
+                    g2d.drawImage(croppedPfp, pfpX, pfpY, pfpSize, pfpSize, null);
 
                     // Draw the custom frame image over the PFP
                     if (framePath != null && !framePath.isEmpty()) {
@@ -199,9 +203,20 @@ public class ImageGenerator {
                             File frameFile = new File(framePath);
                             if (frameFile.exists()) {
                                 BufferedImage frameImage = ImageIO.read(frameFile);
-                                // Drawn slightly larger than the PFP to act as an outer border covering the
-                                // edges
-                                g2d.drawImage(frameImage, pfpX - 15, pfpY - 15, pfpSize + 30, pfpSize + 30, null);
+                                
+                                // Scale the frame while maintaining its original aspect ratio
+                                double scaleX = (double) (pfpSize + 30) / frameImage.getWidth();
+                                double scaleY = (double) (pfpSize + 30) / frameImage.getHeight();
+                                double scale = Math.min(scaleX, scaleY); // 'contain' behavior
+                                
+                                int drawW = (int) (frameImage.getWidth() * scale);
+                                int drawH = (int) (frameImage.getHeight() * scale);
+                                
+                                // Center the properly scaled frame over the PFP
+                                int drawX = pfpX + (pfpSize - drawW) / 2;
+                                int drawY = pfpY + (pfpSize - drawH) / 2;
+
+                                g2d.drawImage(frameImage, drawX, drawY, drawW, drawH, null);
                             } else {
                                 System.err.println("Frame image not found at: " + framePath);
                             }
@@ -216,7 +231,7 @@ public class ImageGenerator {
 
             // 3. Draw the rich text
             if (mainText != null && !mainText.isEmpty()) {
-                Font baseFont = FontLoader.getFont(fontPath, 40f); // Dynamically loads or fetches cached font
+                Font baseFont = FontLoader.getFont(fontPath, 36f); // Dynamically loads or fetches cached font
 
                 // Default starting position for text
                 int textX = 80; // Moved a tad right to match template margins
@@ -249,13 +264,14 @@ public class ImageGenerator {
                                 ld.width + paddingX * 2, ld.height + paddingY * 2));
                     }
 
-                    currentY += ld.height - 4; // Move Y down for next line dynamically
+                    currentY += ld.height + 10; // Move Y down for next line dynamically
                     previousWasBlob = ld.hasBlob;
                 }
 
                 if (!blobBounds.isEmpty()) {
                     Color avgColor = getAverageColor(backgroundImage);
-                    Color blobOverlay = new Color(avgColor.getRed(), avgColor.getGreen(), avgColor.getBlue(), 127);
+                    Color blobOverlay = new Color(avgColor.getRed(), avgColor.getGreen(), avgColor.getBlue(), 64); // 25%
+                                                                                                                   // Opacity
 
                     int w = backgroundImage.getWidth();
                     int h = backgroundImage.getHeight();
@@ -465,9 +481,8 @@ public class ImageGenerator {
 
         for (TextRun run : ld.runs) {
             // Determine the base font for this specific run
-            Font runBase = (run.fontPath != null && !run.fontPath.isEmpty()) ? FontLoader.getFont(run.fontPath, 36f)
-                    : baseFont;
-
+            Font runBase = (run.fontPath != null && !run.fontPath.isEmpty()) ? FontLoader.getFont(run.fontPath, 36f) : baseFont;
+            
             Font runFont = run.fontSize > 0 ? runBase.deriveFont(run.style).deriveFont(run.fontSize)
                     : runBase.deriveFont(run.style);
             FontMetrics fm = g2d.getFontMetrics(runFont);
@@ -500,9 +515,8 @@ public class ImageGenerator {
 
         for (TextRun run : ld.runs) {
             // Determine the base font for this specific run
-            Font runBase = (run.fontPath != null && !run.fontPath.isEmpty()) ? FontLoader.getFont(run.fontPath, 36f)
-                    : baseFont;
-
+            Font runBase = (run.fontPath != null && !run.fontPath.isEmpty()) ? FontLoader.getFont(run.fontPath, 36f) : baseFont;
+            
             Font runFont = run.fontSize > 0 ? runBase.deriveFont(run.style).deriveFont(run.fontSize)
                     : runBase.deriveFont(run.style);
             g2d.setFont(runFont);
@@ -764,9 +778,9 @@ public class ImageGenerator {
 
         // Call the main generator with reasonable default coordinates/sizes based on
         // the reference
-        int defaultMarginRight = 134;
+        int defaultMarginRight = 159;
         int defaultMarginTop = 50;
-        int defaultPfpSize = 350;
+        int defaultPfpSize = 300;
 
         boolean success = generateMatchmakingImage(backgroundPath, pfpUrl, framePath, fontPath, mainText, outputPath,
                 defaultMarginRight, defaultMarginTop, defaultPfpSize);
